[update]11章wo投稿一覧表示まで

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,5 @@
-<h1></h1>
+<h1>aboutページだけどログイン後はusersに飛ばす</h1>
+<p>ここはログインする前の人に見せるためのページになる</p>
+<p>でもサンプルページのアドレスは/home/aboutなのに</p>
+<p>このページは/homes/aboutなのが気になる</p>
+<h1>Welcome to <strong>Bookers!</strong></h1>
