--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,4 +4,9 @@
   <p>投稿ユーザー画像：<%=image_tag 'no_image.jpg' %></p>
   <p>ユーザーネーム：<%= @book.user.name %></p>
   <p>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></p>
+  <!--投稿日は必要なし-->
+  <% if @book.user == current_user %>
+   <%= link_to "削除", book_path(@book), method: :delete %>
+  <% end %>
+   <!--削除は13章を元に記述。遷移先はこのままで-->
 </div>
