--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <div>
   <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
+  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <!--編集画面へのリンクは16章が元-->
 </div>
 
 
@@ -8,7 +10,7 @@
 <div>
   <%= link_to book_path(book.id) do %>
     <!--< %= image_tag book.get_image %>-->
-    <!--↑上のimage_tag系-->
+    <!--↑上のimage_tag系いらない-->
   <% end %>
   <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
   <p>Title：<%= book.title %></p>
