--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,5 +6,6 @@
   <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
   <label for= "user introducthion">Introduction</label>
   <%= f.text_field :introducthion, autofocus: true, id:"inputIntroduction", placeholder:"自己紹介"%>
+  <!--自己紹介のみ反映されていないが名前の変更は-->
   <%= f.submit "変更を保存" %>
 <% end %>
