--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,6 +6,8 @@
 <!--12章で追加。-->
   
   <p>投稿ユーザー画像：<%= image_tag 'no_image.jpeg' %></p>
+  <!--<p>投稿ユーザー画像：< %= image_tag @book.user.get_profile_image(100,100) %></p>-->
+  <!--17章を元に変更しようとしたらshowの方でNameErrprが-->
   <p>Title : <%= book.title %></p>
   <p>Opinion : <%= book.body %></p>
 </div>
