--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,6 +2,8 @@
   <p>Title:<%= @book.title %></p>
   <p>Opinion:<%= @book.body %></p>
   <p>投稿ユーザー画像：<%=image_tag 'no_image.jpg' %></p>
+  <!--<p>投稿ユーザー画像：< %= image_tag @book.user.get_profile_image(100,100) %></p>-->
+  <!--17章を元にNameErrorが出る-->
   <p>ユーザーネーム：<%= @book.user.name %></p>
   <p>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></p>
   <!--投稿日は必要なし-->
