[update]ユーザー一覧のユーザー名とルーティングは作成。他はまだ

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,5 @@
 <div><!--12章で作成-->
+<!--投稿フォーム-->
   <p>Title:<%= @book.title %></p>
   <p>Opinion:<%= @book.body %></p>
   <p>投稿ユーザー画像：<%=image_tag 'no_image.jpg' %></p>
