--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,11 @@
 <h1>ユーザー一覧</h1>
 <% @users.each do |user| %>
 <!--投稿フォームを部分テンプレートで作成-->
-<div>
-  <!--<p>投稿ユーザー画像：< %= image_tag 'no_image.jpeg' %></p>-->
-  <!--<p>Title：< %= book.title %></p>-->
-  <p>ユーザーネーム：<%= user.name %></p>
-  <% end %>
-</div>
+ <div>
+   <p>投稿ユーザー画像：<%= image_tag 'no_image.jpeg' %></p>
+   <p>ユーザーネーム：<%= user.name %></p>
+   <%= link_to user_path(user.id) do %>
+    <p>Show</p>
+   <% end %>
+ </div>
+<% end %>
