[update]投稿フォームを部分テンプレートを使って仮作成

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,7 @@
 <div><!--12章で作成-->
 <!--投稿フォーム-->
+<%= render 'new', books: @books %>
+<!--'list'は_listがついたファイルを指すのか？-->
   <p>Title:<%= @book.title %></p>
   <p>Opinion:<%= @book.body %></p>
   <p>投稿ユーザー画像：<%=image_tag 'no_image.jpg' %></p>
