--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div>
   <!--投稿フォーム-->
+  <%= render 'books/new', books: @books %>
   <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
   
