--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -5,5 +5,5 @@
       <%= f.text_field :title %>
     <h4>opinion</h4>
       <%= f.text_area :body %>
-    <%= f.submit '投稿' %>
+    <%= f.submit 'Create Book' %>
     <% end %>
