--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <header>
       <% if user_signed_in? %>
+      <!--current_user関係かもしれない？-->
         <li>
           <%= link_to '投稿フォーム', new_book_path %>
         </li>
@@ -22,8 +23,15 @@
         </li>
         <!--15章を元にマイページへのリンクを作成-->
         <li>
+          ユーザー一覧
+        </li>
+        <li>
+          本一覧
+        </li>
+        <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
         </li>
+
       <% else %>
         <li>
           <%= link_to "新規登録", new_user_registration_path %>
