--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,13 @@
 <h1>ユーザー一覧</h1>
 <%= render 'books/new', books: @books %>
+<!--< %= render 'user-info', users: @users %>user infoの部分テンプレはエラー-->
 <% @users.each do |user| %>
 <!--投稿フォームを部分テンプレートで作成-->
  <div>
+  <h2>ユーザー一覧</h2>
    <p>投稿ユーザー画像：<%= image_tag 'no_image.jpeg' %></p>
-   <p>ユーザーネーム：<%= user.name %></p>
    <%= link_to user_path(user.id) do %>
-    <p>Show</p>
+    <p>ユーザーネーム：<%= user.name %></p>
    <% end %>
  </div>
 <% end %>
