[update]bookのバリデーションチェックを仮作成

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<% @books.each do |book| %>
+ <% @books.each do |book| %>
 <div>
 
 <!--12章で追加。-->
@@ -6,6 +6,14 @@
 <%= render 'new', books: @books %>
 <h2>投稿一覧</h2>
 
+<% if @book.errors.any? %>
+ <%= @book.errors.count %>件のエラーが発生しました
+ <ul>
+    <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+ </ul>
+ <% end %>
   <p>投稿ユーザー画像：<%= image_tag 'no_image.jpeg' %></p>
   <!--<p>投稿ユーザー画像：< %= image_tag @book.user.get_profile_image(100,100) %></p>-->
   <!--17章を元に変更しようとしたらshowの方でNameErrprが-->
