--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,18 +2,11 @@
 <div>
 
 <!--12章で追加。-->
-<!--<n%= render 'users/user-info', users: @users %>user infoの部分テンプレはエラー-->
+<%= render 'users/user-info', user: @user %>
 <%= render 'new', books: @books %>
 <h2>投稿一覧</h2>
 
-<% if @book.errors.any? %>
- <%= @book.errors.count %>件のエラーが発生しました
- <ul>
-    <% @book.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
- </ul>
- <% end %>
+
   <p>投稿ユーザー画像：<%= image_tag 'no_image.jpeg' %></p>
   <!--<p>投稿ユーザー画像：< %= image_tag @book.user.get_profile_image(100,100) %></p>-->
   <!--17章を元に変更しようとしたらshowの方でNameErrprが-->
