--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,5 @@
 <div><!--12章で作成-->
-<!--投稿フォーム-->
-<!--< %= render 'users/user-info', users: @users %>user infoの部分テンプレはエラー-->
+<%= render 'users/user-info', user: @user %>
 <%= render 'new', books: @books %>
 <h2>本の詳細</h2>
 
