--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,6 @@
+<script src="https://kit.fontawesome.com/6df42682e8.js" crossorigin="anonymous"></script>
 <h1>トップページ</h1>
+<h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers</strong> !!</h1>
+<p>in  <i class="fa-solid fa-book"></i><strong>Bookers</strong>,</p>
+<p>you can share and exchange your opinions , inpressions , emotions</p>
+<p>about barious books!</p>
