--- a/app/views/users/_user-info.html.erb
+++ b/app/views/users/_user-info.html.erb
@@ -1,5 +1,5 @@
-<%= form_with model: @user do |f| %>
-
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <p><%= @user.name %></p>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+　<h2>User info</h2>
+　<%= image_tag user.get_profile_image(100,100) %>
+  <p> name <%= user.name %></p>
+  <p>introduction<%= user.introduction %></p>
+  <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
