--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <h1>ユーザー一覧</h1>
+<%= render 'user-info', user: @user %>
 <%= render 'books/new', books: @books %>
-<!--< %= render 'user-info', users: @users %>user infoの部分テンプレはエラー-->
+
 <!--< % if @list.errors.any? %>-->
 <!--  < %= @list.errors.count %>件のエラーが発生しました-->
 <!--  <ul>-->
@@ -10,9 +11,7 @@
 <!--  </ul>-->
 <!--< % end %>-->
 <% @users.each do |user| %>
-<!--投稿フォームを部分テンプレートで作成-->
  <div>
-  <h2>ユーザー一覧</h2>
    <p>投稿ユーザー画像：<%= image_tag 'no_image.jpeg' %></p>
    <%= link_to user_path(user.id) do %>
     <p>ユーザーネーム：<%= user.name %></p>
