[update]部分テンプレート8割完成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,14 @@
 <div>
   <%= render 'user-info', user: @user %>
-  <!--投稿フォーム-->
-  <%= render 'books/new', books: @books %>
+  <%= render 'books/new', books: @book %>
 
   <h2>ユーザーページ</h2>
-  <%= image_tag @user.get_profile_image(100,100) %>
+  <!--< %= image_tag @user.get_profile_image(100,100) %>-->
 
-  <% if @user.id == current_user.id %>
-   <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <!--< % if @user.id == current_user.id %>-->
+   <!--<p>< %= link_to "プロフィール編集", edit_user_path(@user) %></p>-->
   <!--編集画面へのリンクは16章が元になっている-->
-  <% end %>
+  <!--< % end %>-->
 </div>
 
 
