--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,18 +1,18 @@
 <div><!--12章で作成-->
 <%= render 'users/user-info', user: @user %>
-<%= render 'new', books: @books %>
+<%= render 'new', books: @book %>
 <h2>本の詳細</h2>
 
-  <p>Title:<%= @book.title %></p>
-  <p>Opinion:<%= @book.body %></p>
+  <p>Title:<%= @bookfind.title %></p>
+  <p>Opinion:<%= @bookfind.body %></p>
   <p>投稿ユーザー画像：<%=image_tag 'no_image.jpg' %></p>
   <!--<p>投稿ユーザー画像：< %= image_tag @book.user.get_profile_image(100,100) %></p>-->
   <!--17章を元にNameErrorが出る-->
-  <p>ユーザーネーム：<%= @book.user.name %></p>
-  <p>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></p>
+  <p>ユーザーネーム：<%= @bookfind.user.name %></p>
+  <p>投稿日：<%= @bookfind.created_at.strftime('%Y/%m/%d') %></p>
   <!--投稿日は必要なし-->
-  <% if @book.user == current_user %>
-   <%= link_to "削除", book_path(@book), method: :delete %>
+  <% if @bookfind.user == current_user %>
+   <%= link_to "削除", book_path(@bookfind), method: :delete %>
   <% end %>
    <!--削除は13章を元に記述。遷移先はこのままで-->
 </div>
