--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>ユーザー一覧</h1>
 <%= render 'user-info', user: @user %>
-<%= render 'books/new', books: @books %>
+<%= render 'books/new', books: @book %>
 
 <!--< % if @list.errors.any? %>-->
 <!--  < %= @list.errors.count %>件のエラーが発生しました-->
