[update]投稿のバリデーション解決

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,8 @@
 <%= render 'users/user-info', user: @user %>
 <%= render 'new', books: @book %>
 <h2>本の詳細</h2>
-
+</div>
+<div>
   <p>Title:<%= @bookfind.title %></p>
   <p>Opinion:<%= @bookfind.body %></p>
   <p>投稿ユーザー画像：<%=image_tag 'no_image.jpg' %></p>
