--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,17 @@
  <% @books.each do |book| %>
- 
+ <% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<div>
 <%= render 'users/user-info', user: @user %>
 <%= render 'new', books: @books %>
+</div>
 
 <div>
 <h2>投稿一覧</h2>
