--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -2,14 +2,14 @@
 <h1>投稿フォーム</h1>
 <%= form_with model: @book do |f| %>
 
-<% if @book.errors.any? %>
-<%= @book.errors.count %>件のエラーが発生しました。
- <ul>
-   <% @book.errors.full_messages.each do |message| %>
-   <li><%= message %></li>
-   <% end %>
- </ul>
- <% end %>
+<!--< % if @book.errors.any? %>-->
+<!--< %= @book.errors.count %>件のエラーが発生しました。-->
+<!-- <ul>-->
+<!--   < % @book.errors.full_messages.each do |message| %>-->
+<!--   <li>< %= message %></li>-->
+<!--   < % end %>-->
+<!-- </ul>-->
+<!-- < % end %>-->
 
     <h4>Title</h4>
       <%= f.text_field :title %>
