[update]Editのdestroyが実行できない

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -21,4 +21,5 @@
     <%= f.submit 'Update Book' %>
   <% end %>
 
-<p>Show</p><p>|</p><p>Destroy</p>
+<%= link_to 'Show', book_path %>
+<!--< %= link_to "Destroy", destroy_books_path , method: :delete,"data-confirm"=>"本当に削除しますか？" %>-->
