--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,10 @@
         </li>
         <!--15章を元にマイページへのリンクを作成-->
         <li>
-          ユーザー一覧
+          <%= link_to 'ユーザー一覧', users_path %>
         </li>
         <li>
-          本一覧
+          <%= link_to '本一覧' , books_path %>
         </li>
         <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
