--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -1,9 +1,14 @@
+<h2 class="mt-3">New book</h2>
 <%= form_with model: @book do |f| %>
-
-
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-    <% end %>
+<div class="form-group">
+  <label for="book_title">Title</label>
+  <%= f.text_field :title %>
+</div>
+<div class="form-group">
+  <label for"book_opinion">Opinion<label>
+  <%= f.text_area :body %>
+</div>
+<div lass="form-group">
+  <%= f.submit 'Create Book' %>
+</div>
+<% end %>
