--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -22,4 +22,4 @@
   <% end %>
 
 <%= link_to 'Show', book_path %>
-<!--< %= link_to "Destroy", destroy_books_path , method: :delete,"data-confirm"=>"本当に削除しますか？" %>-->
+<%= link_to "Back", books_path %>
