--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,7 +14,7 @@
   <p>投稿日：<%= @bookfind.created_at.strftime('%Y/%m/%d') %></p>
   <!--投稿日は必要なし-->
   <% if @bookfind.user == current_user %>
-   <%= link_to "削除", book_path(@bookfind), method: :delete %>
+   <%= link_to "削除", book_path(@bookfind), method: :delete, "data-confirm" => "本当に削除しますか？" %>
   <% end %>
    <!--削除は13章を元に記述。遷移先はこのままで-->
 </div>
