--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <header>
       <% if user_signed_in? %>
       <!--current_user関係かもしれない？-->
-        <li>
-          <%= link_to '投稿フォーム', new_book_path %>
-        </li>
+        <!--<li>-->
+        <!--  < %= link_to '投稿フォーム', new_book_path %>-->
+        <!--</li>-->
         <!--10章を元に投稿フォームを作成-->
         <li>
-          <%= link_to 'マイページ', user_path(current_user.id) %>
+          <%= link_to 'Home', user_path(current_user.id) %>
         </li>
         <!--15章を元にマイページへのリンクを作成-->
         <li>
-          <%= link_to 'ユーザー一覧', users_path %>
+          <%= link_to 'User', users_path %>
         </li>
         <li>
-          <%= link_to '本一覧' , books_path %>
+          <%= link_to 'Book' , books_path %>
         </li>
         <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
