--- a/app/views/users/_user-info.html.erb
+++ b/app/views/users/_user-info.html.erb
@@ -1,5 +1,17 @@
 　<h2>User info</h2>
-　<%= image_tag user.get_profile_image(100,100) %>
-  <p> name <%= user.name %></p>
-  <p>introduction<%= user.introduction %></p>
-  <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
+　<table class='table'>
+　  <tr><%= image_tag user.get_profile_image(100,100) %></tr>
+　  <tr>
+　    <th>name</th>
+　    <th><%= user.name %></th>
+　  </tr>
+　  <tr>
+　    <th>introduction</th>
+　    <th><%= user.introduction %></th>
+　  </tr>
+　</table>
+　<div class='row'>
+　  <a class="btn btn-outline-secondary" <%= link_to "プロフィール編集", edit_user_path(user) %>
+　   <!--<i class="fas fa-user-cog"></i>-->
+　  </a>
+　 </div>
