--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,40 @@
-<div>
-  <%= render 'user-info', user: @user %>
-  <%= render 'books/new', books: @book %>
-</div>
-
-  <h2>ユーザーページ</h2>
-
-<% @books.each do |book| %>
-<div>
-    <!--< %= image_tag book.get_image %>-->
-    <!--↑上のimage_tag系いらない-->
-  <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
-  <%= link_to book_path(book.id) do %>
-  <p>Title：<%= book.title %></p>
-  <% end %>
-  <p>Opinion：<%= book.body %></p>
-  <!--<p>ユーザーネーム：< %= post_image.user.name %></p>-->
-  <!--ユーザーネーム部分省いたら普通にルーティングおkだった-->
-</div>
+<main>
+  <p id="notice"></p>
+  <div class='container px-5 px-sm-0'>
+    <div class='row'>
+      <div class='col-md-3'>
+        <%= render 'user-info', user: @user %>
+        <%= render 'books/new', books: @book %>
+        </div>
+        <div class='col-md-8 offset-md-1'>
+          <h2>Books</h2>
+          <table class='table table-hover table-inverse'>
+            <% @books.each do |book| %>
+            <thead>
+              <!--< %= image_tag book.get_image %>-->
+              <!--↑上のimage_tag系いらない-->
+              <tr>
+                <th></th>
+                <th>Title</th>
+                <th>Opinion</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href><%= image_tag book.user.get_profile_image(100,100) %>
+                <%= link_to book_path(book.id) do %></>
+                </td>
+                <td>Title:<%= book.title %></td>
+                <% end %>
+                <td>Opinion：<%= book.body %></td>
+                <!--<p>ユーザーネーム：< %= post_image.user.name %></p>-->
+                <!--ユーザーネーム部分省いたら普通にルーティングおkだった-->
+              </tr>
+            </tbody>
+          </table>
+        </div>
+    </div>
+  </div>
+</main>
 <% end %>
