--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,25 +1,31 @@
-<h1>Editing Book</h1>
-<!--最後まで作り忘れてた-->
-
-<% if @book.errors.any? %>
-<%= @book.errors.count %>件のエラーが発生しました。
- <ul>
-   <% @book.errors.full_messages.each do |message| %>
-   <li><%= message %></li>
-   <% end %>
- </ul>
- <% end %>
-
-<%= form_with model: @book do |f| %>
-
-    <h4>Title</h4>
+<main>
+ <p id="notice"></p>
+ <div class='container'>
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+     <h1>Editing Book</h1>
+     <% if @book.errors.any? %>
+     <%= @book.errors.count %>件のエラーが発生しました。
+     <ul>
+      <% @book.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+      <% end %>
+     </ul>
+     <% end %>
+     
+     <%= form_with model: @book do |f| %>
+     <div class="form-group">
+      <label for="book_title">Title</label>
       <%= f.text_field :title %>
-
-    <h4>Opinion</h4>
+     </div>
+     <div class="form-group">
+      <label for="book-opinion">Opinion</label>
       <%= f.text_area :body %>
-
-    <%= f.submit 'Update Book' %>
-  <% end %>
-
-<%= link_to 'Show', book_path %>
-<%= link_to "Back", books_path %>
+     </div>
+     <div class="form-group">
+      <%= f.submit 'Update Book' %>
+     </div>
+    <% end %>
+    <%= link_to 'Show', book_path %>
+    |
+    <%= link_to "Back", books_path %>
