--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,25 +12,33 @@
   </head>
 
   <body>
+    <header>
       <% if user_signed_in? %>
-      <!--current_user関係かもしれない？-->
-        <!--<li>-->
-        <!--  < %= link_to '投稿フォーム', new_book_path %>-->
-        <!--</li>-->
-        <!--10章を元に投稿フォームを作成-->
-        <li>
-          <%= link_to 'Home', user_path(current_user.id) %>
-        </li>
-        <!--15章を元にマイページへのリンクを作成-->
-        <li>
-          <%= link_to 'User', users_path %>
-        </li>
-        <li>
-          <%= link_to 'Book' , books_path %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </li>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/"><span>Bookers</span></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <li>
+                <%= link_to 'Home', user_path(current_user.id) %>
+              </li>
+              <li>
+                <%= link_to 'Users', users_path %>
+              </li>
+              <li>
+                <%= link_to 'Books' , books_path %>
+              </li>
+              <li>
+                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header
 
       <% else %>
         <li>
