[update]編集画面のレイアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,13 @@
                 <%= link_to 'Books' , books_path %>
               </li>
               <li>
-                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                <%= link_to "Log-aut", destroy_user_session_path, method: :delete %>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    </header
+    </header>
 
       <% else %>
         <li>
