--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,39 +1,42 @@
+<% @books.each do |book| %>
 <main>
-  <p id="notice"></p>
+  <p id="notice"><%= notice %></p>
   <div class='container px-5 px-sm-0'>
     <div class='row'>
       <div class='col-md-3'>
         <%= render 'user-info', user: @user %>
         <%= render 'books/new', books: @book %>
-        </div>
-        <div class='col-md-8 offset-md-1'>
-          <h2>Books</h2>
-          <table class='table table-hover table-inverse'>
-            <% @books.each do |book| %>
-            <thead>
-              <!--< %= image_tag book.get_image %>-->
-              <!--↑上のimage_tag系いらない-->
-              <tr>
-                <th></th>
-                <th>Title</th>
-                <th>Opinion</th>
-                <th colspan="3"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td><a href><%= image_tag book.user.get_profile_image(100,100) %>
-                <%= link_to book_path(book.id) do %></>
-                </td>
-                <td>Title:<%= book.title %></td>
-                <% end %>
-                <td>Opinion：<%= book.body %></td>
-                <!--<p>ユーザーネーム：< %= post_image.user.name %></p>-->
-                <!--ユーザーネーム部分省いたら普通にルーティングおkだった-->
-              </tr>
-            </tbody>
-          </table>
-        </div>
+      </div>
+     <div class='col-md-8 offset-md-1'>
+       <h2>Books</h2>
+       <table class='table table-hover table-inverse'>
+    <!--< % @books.each do |book| %>-->
+         <thead>
+    <!--< %= image_tag book.get_image %>-->
+           <tr>
+             <th></th>
+             <th>Title</th>
+             <th>Opinion</th>
+             <th colspan="3"></th>
+           </tr>
+         </thead>
+         <tbody>
+           <tr>
+             <td><a href><%= image_tag book.user.get_profile_image(100,100) %>
+             <%= link_to book_path(book.id) do %>
+             <% end %>
+             </td>
+             <td>Title:<%= book.title %>
+             <%= link_to books_path do%>
+             <% end %>
+             </td>
+             <td>Opinion：<%= book.body %></td>
+        <!--<p>ユーザーネーム：< %= post_image.user.name %></p>-->
+        <!--ユーザーネーム部分省いたら普通にルーティングおkだった-->
+           </tr>
+         </tbody>
+       </table>
+     </div>
     </div>
   </div>
 </main>
