[update] aboutだけ9割完成？

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,6 +1,9 @@
+<main>
+ <p id="notice"></p>
 <script src="https://kit.fontawesome.com/6df42682e8.js" crossorigin="anonymous"></script>
-<h1>aboutページだけどログイン後はusersに飛ばす</h1>
-<p>ここはログインする前の人に見せるためのページになる</p>
-<p>でもサンプルページのアドレスは/home/aboutなのに</p>
-<p>このページは/homes/aboutなのが気になる</p>
-<h1>Welcome to <i class="fa-solid fa-book"></i><strong>Bookers!</strong></h1>
+ <div class='container'>
+  <div class='row'>
+   <h1 class="px-3 mx-auto">Welcome to <i class="fa-solid fa-book"></i><strong>Bookers</strong>!</h1>
+  </div>
+ </div>
+</main>
