--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,20 @@
+<main>
 <script src="https://kit.fontawesome.com/6df42682e8.js" crossorigin="anonymous"></script>
-<h1>トップページ</h1>
-<h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers</strong> !!</h1>
-<p>in  <i class="fa-solid fa-book"></i><strong>Bookers</strong>,</p>
-<p>you can share and exchange your opinions , inpressions , emotions</p>
-<p>about barious books!</p>
+<p id="notice"></p>
+<div class="container">
+  <div class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
+    <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers</strong> !!</h1>
+    <p>in  <i class="fa-solid fa-book"></i><strong>Bookers</strong>,</p>
+    <p>you can share and exchange your opinions , inpressions , emotions</p>
+    <p>about barious books!</p>
+    <div class="btn-wrapper col-10 mx-auto">
+      <div class="row">
+        <%= link_to 'Log in', new_user_session_path, class:'btn btn-info btn-block' %>
+      </div>
+      <div class="row">
+        <%= link_to 'Sign Up', new_user_registration_path, class:'btn btn-success btn-block' %>
+      </div>
+    </div>
+  </div>
+</div
+</main>
