--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,4 @@
+
 <main>
 <script src="https://kit.fontawesome.com/6df42682e8.js" crossorigin="anonymous"></script>
 <p id="notice"></p>
@@ -16,5 +17,5 @@
       </div>
     </div>
   </div>
-</div
+</div>
 </main>
