--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,6 @@
   <div class='container px-5 px-0'>
     <div class='row'>
       <div class='col-md-3'>
-<% @books.each do |book| %>
  <% if @book.errors.any? %>
   <%= @book.errors.count %>件のエラーが発生しました
   <ul>
@@ -30,16 +29,20 @@
        <th colspan="3"></th>
      </tr>
     </thead>
-  <tbody>
-    <tr>
-     <td><%= image_tag 'no_image.jpeg' %>
-     <%= link_to book_path(book.id) do %></td>
-     <td>Title:<!--< %= @bookfind.title %>--></td>
-     <td>Opinion :<!-- < %= book.body %>--></td>
+    
+    <% @books.each do |book| %>
+     <tbody>
+      <tr>
+       <td><%= image_tag 'no_image.jpeg' %>
+       <%= link_to book_path(book.id) do %>
+       </td>
+       <td><%=link_to book.title %></td>
+       <td>Opinion :<%= book.body %></td>
      <% end %>
     </tr>
   </tbody>
+  <% end %>
  </table>
 </div>
-<% end %>
+</div>
 </main>
