--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
   <script src="https://kit.fontawesome.com/6df42682e8.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
- <head>
     <title>Bookers2App</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <% if user_signed_in? %>
+      <!--< % if user_signed_in? %>-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/"><span>Bookers</span></a>
@@ -23,6 +23,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
               <li>
                 <%= link_to 'Home', user_path(current_user.id) %>
               </li>
@@ -35,20 +36,24 @@
               <li>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
               </li>
+              <% else %>
+              <li>
+                <%= link_to "Home", root_path %>
+              </li>
+              <li>
+                <%= link_to  "About", about_path %>
+              </li>
+              <li>
+                <%= link_to "  Sign Up", new_user_registration_path %>
+              </li>
+              <li>
+                <%= link_to "  Log in", new_user_session_path %>
+              </li>
+              <% end %>
             </ul>
           </div>
         </div>
       </nav>
-    </header>
-
-      <% else %>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
-      <% end %>
     </header>
     <%= yield %>
   <footer>
