--- a/app/views/users/_user-info.html.erb
+++ b/app/views/users/_user-info.html.erb
@@ -1,6 +1,7 @@
 　<h2>User info</h2>
-　<table class='table'>
-　  <tr><%= image_tag user.get_profile_image(100,100) %></tr>
+　<!--<table class='table'>-->
+　 <%= image_tag user.get_profile_image(100,100) %>
+　 <table class='table'>
 　  <tr>
 　    <th>name</th>
 　    <th><%= user.name %></th>
