--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,41 @@
-<h2>User info</h2>
+<main>
+  <p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h2>User info</h2>
 
-<% if @user.errors.any? %>
-<%= @user.errors.count %>件のエラーが発生しました。
- <ul>
-   <% @user.errors.full_messages.each do |message| %>
-   <li><%= message %></li>
-   <% end %>
- </ul>
- <% end %>
+          <% if @user.errors.any? %>
+          <%= @user.errors.count %>件のエラーが発生しました。
+           <ul>
+             <% @user.errors.full_messages.each do |message| %>
+             <li><%= message %></li>
+             <% end %>
+           </ul>
+           <% end %>
  
-<%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">Profileimage</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <label for= "user introducthion">Introduction</label>
-  <%= f.text_field :introducthion, autofocus: true, id:"inputIntroduction", placeholder:"自己紹介"%>
-  <!--自己紹介のみ反映されていないが名前の変更は-->
-  <%= f.submit "変更を保存" %>
-<% end %>
+          <%= form_with model: @user do |f| %>
+          <div class="form_group">
+            <label for="inputName">Name</label>
+            <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+            </div>
+            
+            <div class="form_group">
+              <label for="inputImage">Profileimage</label>
+              <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+            </div>
+            
+            <div class="form_group">
+              <label for= "user introducthion">Introduction</label>
+              <%= f.text_field :introducthion, autofocus: true, id:"inputIntroduction", placeholder:"自己紹介"%>
+            </div>
+            <!--自己紹介のみ反映されていないが名前の変更は-->
+            
+            <div class="form_group">
+              <%= f.submit "Update User" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+  </div>
+</main>
