--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,31 +4,31 @@
   <div class='row'>
    <div class='col-md-3'>
     <%= render 'users/user-info', user: @user %>
-     <%= render 'new', books: @book %>
-      <div class='col-md-8 offset-md-1'>
-       <h2>Books</h2>
-
-       <table class='table'>
-        <tr>
-         <!--ここから-->
-         <td>投稿ユーザー画像：<%= link_to (@book.user_id) do %>
-         <%=attachment_image_tag @book.user_id, :fill, 50, 50, fallbach:'no_image.jpg',size:'50x50' %>
+    <%= render 'new', books: @book %>
+   </div>
+   
+   <div class='col-md-8 offset-md-1'>
+    <h2>Book detail</h2>
+    <table class='table'>
+     <tbody>
+      <tr>
+        <td><%= link_to user_path(@book.user_id) do %>
+         <%= image_tag @book.user.get_profile_image(100,100) %>
          <br>
-         <!--ここら辺りでエラー-->
          <%= @book.user.name %>
          <% end %>
-         </td>
-         <td>Title:<%= @bookfind.title %></td>
-         <!--<td>Opinion:< %= @bookfind.body %></td>-->
-         <td><%= link_to "編集", edit_book_path(@bookfind.id) %></td>
-         <td>ユーザーネーム：<%= @bookfind.user.name %></td>
-         <% if @bookfind.user == current_user %>
-         <%= link_to "削除", book_path(@bookfind), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+        </td>
+        <td><%= link_to @bookfind.title %></td>
+        <td><%= link_to "edit", edit_book_path(@bookfind.id), class:"btn-sm btn-success" %></td>
+        <td><% if @bookfind.user == current_user %>
+         <%= link_to "destroy", book_path(@bookfind), class:"btn-sm btn-danger destroy(@bookfind)",method: :delete, "data-confirm" => "本当に削除しますか？" %>
          <% end %>
-        </tr>
-       </table>
-      </div>
+        </td>
+      </tr>
+     </tbody>
+    </table>
    </div>
+
   </div>
  </div>
 </main>
