--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -25,7 +25,7 @@
       <%= f.text_area :body %>
       </div>
      <div class="form-group">
-      <%= f.submit 'Update Book' %>
+      <%= f.submit 'Update Book', class="btn btn-secondary" %>
       <!--アップデートボタンの色変えはカリキュラムにありそう-->
       
      </div>
