--- a/app/views/users/_user-info.html.erb
+++ b/app/views/users/_user-info.html.erb
@@ -1,6 +1,7 @@
 　<h2>User info</h2>
-　<!--<table class='table'>-->
+
 　 <%= image_tag user.get_profile_image(100,100) %>
+
 　 <table class='table'>
 　  <tr>
 　    <th>name</th>
@@ -11,7 +12,9 @@
 　    <th><%= user.introduction %></th>
 　  </tr>
 　</table>
+　<div class = "row">
 　  <a class="btn btn-outline-secondary" <%= link_to "プロフィール編集", edit_user_path(user) %>
 　   <!--<i class="fas fa-user-cog"></i>-->
 　  </a>
+　  </div>
 
