--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,9 +6,9 @@
      <%= render 'user-info', user: @user %>
      <%= render 'books/new', books: @book %>
     </div>
-    
+
     <div class="col-md-8 offset-md-1">
-     <h2>ユーザー一覧</h2>
+     <h2>Users</h2>
      <table class="table">
       <thead>
        <tr>
@@ -17,15 +17,15 @@
         <th colspan="3"></th>
        </tr>
       </thead>
-
+      
       <% @users.each do |user| %>
        <tbody>
         <tr>
          <td><%= image_tag 'no_image.jpeg' %>
          <%= link_to user_path(user.id) do %>
          </td>
-         <td>ユーザーネーム：<%= user.name %></td>
-         <td>Show</td>
+         <td><%= user.name %></td>
+         <td><%= link_to "Show", user_path(user.id) %></td>
          <% end %>
         </tr>
        </tbody>
