--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
      <div class='col-md-8 offset-md-1'>
        <h2>Books</h2>
        <table class='table table-hover table-inverse'>
+           
            <thead>
                  <tr>
                  <th></th>
@@ -25,14 +26,10 @@
                      <%= link_to book_path(book.id) do %>
                      <% end %>
                      </td>
-                     <td>Title:<%= book.title %>
-                     <%= link_to books_path do%>
-                     <% end %>
-                     </td>
+                     <td><%= link_to book.title, book_path(book.id) %></td>
                      <td>Opinion：<%= book.body %></td>
-
-
                  </tbody>
+                 
              <% end %>
            </table>
      </div>
