チェック中

--- a/app/views/users/_user-info.html.erb
+++ b/app/views/users/_user-info.html.erb
@@ -5,6 +5,7 @@
 　 <table class='table'>
 　  <tr>
 　    <th>name</th>
+　    <span class ="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
 　    <th><%= user.name %></th>
 　  </tr>
 　  <tr>
