--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
               </li>
               
               <li>
+                <i class="fa-solid fa-users"></i>
                 <%= link_to 'Users', users_path %>
               </li>
               
