--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/"><span>Bookers</span></a>
-          
+
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,38 +28,38 @@
               <li>
                 <%= link_to 'Home', user_path(current_user.id) %>
               </li>
-              
+
               <li>
                 <i class="fa-solid fa-users"></i>
                 <%= link_to 'Users', users_path %>
               </li>
-              
+
               <li>
                 <%= link_to 'Books' , books_path %>
               </li>
-              
+
               <li>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
               </li>
               <% else %>
-              
+
               <li>
                 <%= link_to "Home", root_path %>
               </li>
-              
+
               <li>
-                <%= link_to  "About", about_path %>
+                <%= link_to  "About", home_about_path %>
               </li>
-              
+
               <li>
                 <%= link_to "  Sign Up", new_user_registration_path %>
               </li>
-              
+
               <li>
                 <%= link_to "  Log in", new_user_session_path %>
               </li>
               <% end %>
-              
+
             </ul>
           </div>
         </div>
