--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,7 @@
 <main>
+ <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
  <p id="notice"></p>
  <div class='container px-5 px-sm-0'>
   <div class='row'>
