--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
               </li>
 
               <li>
-                <%= link_to  "About", home_about_path %>
+                <%= link_to  "About", about_path %>
               </li>
 
               <li>
