books/editのシンタックスエラー解決

--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -12,6 +12,6 @@
 </div>
 
 <div lass="form-group">
-  <%= f.submit 'Create Book' %>
+  <%= f.submit 'Create Book', class:"btn-sm btn-success" %>
 </div>
 <% end %>
