--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -16,20 +16,21 @@
      <%= form_with model: @book do |f| %>
      <div class="form-group">
       <label for="book_title">Title</label>
-      <!--<%= f.text_field :title %>-->
-      <input class="form-control book_title" type="text" value="" name="book[title]" id="book_title" />
-     <!--↑デベロッパーツールを元にvalueを未記入で書き換えた-->
+      <%= f.text_field :title %>
      </div>
+     
      <div class="form-group">
       <label for="book-opinion">Opinion</label>
       <%= f.text_area :body %>
       </div>
      <div class="form-group">
-      <%= f.submit 'Update Book', class="btn btn-secondary" %>
-      <!--アップデートボタンの色変えはカリキュラムにありそう-->
+      <%= f.submit 'Update Book', class:"btn btn-success" %>
       
      </div>
     <% end %>
     <%= link_to 'Show', book_path %>
     |
     <%= link_to "Back", books_path %>
+    </div>
+  </div>
+ </div>
