--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -31,15 +31,16 @@
      </tr>
     </thead>
 
-    <% @books.each do |book| %>
-     <tbody>
+    <tbody>
+     <% @books.each do |book| %>
       <tr>
-       <td><%= image_tag 'no_image.jpeg' %>
-       <%= link_to book_path(book.id) do %>
+       <td>
+       <%= link_to user_path(book.user) do %>
+       <%= image_tag 'no_image.jpeg' %>
+       <% end %>
        </td>
        <td><%= link_to book.title, book_path(book.id) %></td>
        <td>Opinion :<%= book.body %></td>
-     <% end %>
     </tr>
   </tbody>
   <% end %>
