--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,39 +24,42 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
+              
               <% if user_signed_in? %>
+              
               <li>
-                <%= link_to 'Home', user_path(current_user.id) %>
+                <%= link_to 'Home', user_path(current_user.id) , class: "fa-solid fa-house-chimney" %>
               </li>
 
               <li>
-                <i class="fa-solid fa-users"></i>
-                <%= link_to 'Users', users_path %>
+                <!--<i class="fa-solid fa-users"></i>-->
+                <%= link_to 'Users', users_path , class: "fa-solid fa-users" %>
+                
               </li>
 
               <li>
-                <%= link_to 'Books' , books_path %>
+                <%= link_to 'Books' , books_path , class: "fa-solid fa-book-open" %>
               </li>
 
               <li>
-                <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete , class: "fa-solid fa-right-from-bracket" %>
               </li>
               <% else %>
 
               <li>
-                <%= link_to "Home", root_path %>
+                <%= link_to "Home", root_path , class: "fa-solid fa-house-chimney" %>
               </li>
 
               <li>
-                <%= link_to  "About", about_path %>
+                <%= link_to  "About", about_path , class: "fa-solid fa-link" %>
               </li>
 
               <li>
-                <%= link_to "  Sign Up", new_user_registration_path %>
+                <%= link_to "  Sign up", new_user_registration_path , class: "fa-solid fa-user-plus" %>
               </li>
 
               <li>
-                <%= link_to "  Log in", new_user_session_path %>
+                <%= link_to "  Log in", new_user_session_path , class: "fa-solid fa-arrow-right-to-bracket"%>
               </li>
               <% end %>
 
