他人の編集画面へのアクセス制限を付けた

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,29 +9,29 @@
     <%= render 'users/user-info', user: @user %>
     <%= render 'new', books: @book %>
    </div>
-   
+
    <div class='col-md-8 offset-md-1'>
     <h2>Book detail</h2>
     <table class='table'>
      <tbody>
       <tr>
-        
-        <td><%= link_to user_path(@book.user_id) do %>
-         <%= image_tag @book.user.get_profile_image(100,100) %>
+
+        <td><%= link_to user_path(@user) do %>
+         <%= image_tag @user.get_profile_image(100,100) %>
          <br>
-         <%= @book.user.name %>
+         <%= @user.name %>
          <% end %>
         </td>
-        
+
         <td><%= link_to @bookfind.title %></td>
-        
+
         <td><%= @bookfind.body %></td>
-        
+
         <td><% if @bookfind.user == current_user %>
          <%= link_to "Edit", edit_book_path(@bookfind.id), class:"btn-sm btn-success" %>
          <% end %>
          </td>
-         
+
          <td><% if @bookfind.user == current_user %>
          <%= link_to "Destroy", book_path(@bookfind), class:"btn-sm btn-danger destroy(@bookfind)",method: :delete, "data-confirm" => "本当に削除しますか？" %>
          <% end %>
