--- a/app/views/users/_user-info.html.erb
+++ b/app/views/users/_user-info.html.erb
@@ -5,7 +5,7 @@
 　 <table class='table'>
 　  <tr>
 　    <th>name</th>
-　    <span class ="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+　    <span class ="glyphicon glyphicon-home" aria-hidden="true"> </span>
 　    <!--多分、Home表示でエラーが出てる-->
 　    <th><%= user.name %></th>
 　  </tr>
